docs(shield): add Swagger annotations and HTTP test for GetThreatsSummary
